Se ajusta seguridad y se adiciona dependencia para generar jar